[Create group] added icons to the page. now to fix the spacing

--- a/src/App.css
+++ b/src/App.css
@@ -14,3 +14,64 @@ body {
 	height: 60px; /* Set the fixed height of the footer here */
 	line-height: 60px; /* Vertically center the text there */
 }
+
+#icon {
+	width: 79px;
+    height: 79px;
+	/* Colors / Pink */
+	background: #FF89BB;
+	/* Colors / Black */
+	right: 80px;
+    top: 135px;
+    width: 79px;
+    height: 79px;
+    background: #FF89BB;
+    border: 2px solid #18191F;
+    box-sizing: border-box;
+    border-radius: 166px;
+}
+
+#icon2{
+	width: 79px;
+    height: 79px;
+    left: 80px;
+    top: 53px;
+    background: #F95A2C;
+    border: 2px solid #18191F;
+    box-sizing: border-box;
+    border-radius: 166px;
+}
+
+#icon3 {
+	width: 79px;
+    height: 79px;
+	background: #00C6AE;
+    border: 2px solid #18191F;
+    box-sizing: border-box;
+    border-radius: 166px;
+    margin: auto;
+}
+
+#icon4 {
+	width: 79px;
+    height: 79px;
+	right: 60px;
+	top: -20px;
+    background: #FFBD12;
+    border: 2px solid #18191F;
+    box-sizing: border-box;
+    border-radius: 166px;
+}
+
+#icon5 {
+	width: 79px;
+	height: 79px;
+	left: 60px;
+	top: -100px;
+	/* Contra / Blue */
+	background: #1947E6;
+	/* Colors / Black */
+	border: 2px solid #18191F;
+	box-sizing: border-box;
+	border-radius: 166px;
+	}
